--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,35 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.333
+head: 1.337
 branch:
 locks: strict
-	gilles: 1.333
+	gilles: 1.337
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 333;	selected revisions: 333
+total revisions: 337;	selected revisions: 337
 description:
 ----------------------------
-revision 1.333	locked by: gilles;
+revision 1.337	locked by: gilles;
+date: 2010/07/16 23:23:40;  author: gilles;  state: Exp;  lines: +12 -6
+Added --usedatemanip option (not documented in --help)
+Turned off Date::Manip usage by default: release 6.x vs 5.x buggy,
+and dprof showed slow routines come from Date::Manip
+----------------------------
+revision 1.336
+date: 2010/07/16 22:04:25;  author: gilles;  state: Exp;  lines: +8 -7
+Bugfix. $syncinternaldates could not be set 0. Unbelievable!
+----------------------------
+revision 1.335
+date: 2010/07/16 00:44:25;  author: gilles;  state: Exp;  lines: +26 -15
+Bugfix. Fixed Date_TimeZone break under win32.
+----------------------------
+revision 1.334
+date: 2010/07/15 12:20:48;  author: gilles;  state: Exp;  lines: +50 -32
+Added statistics about "Messages void (noheader) on hostX"
+----------------------------
+revision 1.333
 date: 2010/07/14 23:55:13;  author: gilles;  state: Exp;  lines: +7 -9
 docfix
 ----------------------------
