--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.16 2010/01/14 23:41:59 gilles Exp gilles $
+# $Id: INSTALL,v 1.17 2010/07/16 22:01:57 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync or copy tool.
@@ -58,15 +58,20 @@ Here is some individual module help:
   http://search.cpan.org/~djkernen/
   http://search.cpan.org/~djkernen/Mail-IMAPClient-2.2.9/
   
-  In fact I use Mail-IMAPClient-2.2.9
+  In fact I use Mail-IMAPClient-2.2.9 and latest Mail-IMAPClient-2.xx
+  (xx >= 25)
   To know the version you have on your system try :
 
   perl -mMail::IMAPClient -e 'print $Mail::IMAPClient::VERSION, "\n"'
 
   New Mail-IMAPClient-3.xx works now with imapsync,
-  at least with Mail-IMAPClient-3.19 (previous may bug)
+  at least with Mail-IMAPClient-3.25 (previous may bug)
 
 - Perl Digest::MD5 module. 
+  try:
+
+  perl -mDigest::MD5
+
   http://search.cpan.org/
   http://search.cpan.org/~gaas/Digest-MD5-2.36/
   To know the version you have on your system try :
@@ -88,9 +93,12 @@ Here is some individual module help:
 - File::Path
   perl -mFile::Path -e ''
 
-- (Option) Perl Digest::HMAC_MD5 module
+- Perl Digest::HMAC_MD5 module
   Good for non plain text password over network.
 
+Everything in one command:
+
+  perl -mMail::IMAPClient -mDigest::MD5 -mTerm::ReadKey -mIO::Socket::SSL -mDate::Manip -mFile::Spec -mDigest::HMAC_MD5 -e ''
 
 INSTALLING
 ----------
