--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.333 $
+    $Revision: 1.337 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -24,8 +24,8 @@ INSTALL
      Go into the directory imapsync-x.xx and read the INSTALL file.
      The INSTALL file is also at 
      http://www.linux-france.org/prj/imapsync/INSTALL (for windows users)
- 
-     The freshmeat record is at http://freshmeat.net/projects/imapsync/
+     
+ The freshmeat record is at http://freshmeat.net/projects/imapsync/
 
 SYNOPSIS
       imapsync [options]
@@ -76,7 +76,7 @@ SYNOPSIS
                [--pidfile <filepath>]
                [--tmpdir  <dirpath>]
                [--version] [--help]
-  
+
 DESCRIPTION
     The command imapsync is a tool allowing incremental and recursive imap
     transfer from one mailbox to another.
@@ -204,13 +204,10 @@ AUTHOR
     that services.
 
 BUG REPORT GUIDELINES
-    Report any bugs or feature requests to the public mailing-list or to the
-    author.
-
     Help us to help you: follow the following guidelines.
 
-    One time in your life, read the paper "How To Ask Questions The Smart
-    Way" http://www.catb.org/~esr/faqs/smart-questions.html
+    Report any bugs or feature requests to the public mailing-list or to the
+    author.
 
     Before reporting bugs, read the FAQ, the README and the TODO files.
     http://www.linux-france.org/prj/imapsync/
@@ -218,7 +215,8 @@ BUG REPORT GUIDELINES
     Upgrade to last imapsync release, maybe the bug is already fixed.
 
     Upgrade to last Mail-IMAPClient Perl module.
-    http://search.cpan.org/dist/Mail-IMAPClient/
+    http://search.cpan.org/dist/Mail-IMAPClient/ maybe the bug is already
+    fixed.
 
     Make a good title with word "imapsync" in it (my spam filter won't
     filter it), Don't write an email title with just "imapsync" or
@@ -231,18 +229,30 @@ BUG REPORT GUIDELINES
     Help us to help you: in your report, please include:
 
      - imapsync version.
-     - output given with --debug --debugimap near the failure point.
-       Isolate a message in a folder 'BUG' and use --folder 'BUG'
-     - imap server software on both side and their version number.
-     - imapsync with all the options you use,  the full command line
+     
+ - output given with --debug --debugimap near the failure point.
+       Isolate a message or two in a folder 'BUG' and use 
+           --folder 'BUG' --debug --debugimap 
+     
+ - imap server software on both side and their version number.
+     
+ - imapsync with all the options you use,  the full command line
        you use (except the passwords of course). 
-     - IMAPClient.pm version.
-     - operating system running imapsync.
-     - operating systems on both sides and the third side in case
+     
+ - IMAPClient.pm version.
+     
+ - operating system running imapsync.
+     
+ - operating systems on both sides and the third side in case
        you run imapsync on a foreign host from the both.
-     - virtual software context (vmware, xen etc.)
+     
+ - virtual software context (vmware, xen etc.)
 
-     Most of those values can be found as a copy/paste at the begining of the output.
+    Most of those values can be found as a copy/paste at the begining of the
+    output.
+
+    One time in your life, read the paper "How To Ask Questions The Smart
+    Way" http://www.catb.org/~esr/faqs/smart-questions.html and forget it.
 
 IMAP SERVERS
     Failure stories reported with the following 4 imap servers:
@@ -377,5 +387,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will always be welcome.
 
-    $Id: imapsync,v 1.333 2010/07/14 23:55:13 gilles Exp gilles $
+    $Id: imapsync,v 1.337 2010/07/16 23:23:40 gilles Exp gilles $
 
