--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,29 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.337
+head: 1.340
 branch:
 locks: strict
-	gilles: 1.337
+	gilles: 1.340
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 337;	selected revisions: 337
+total revisions: 340;	selected revisions: 340
 description:
 ----------------------------
-revision 1.337	locked by: gilles;
+revision 1.340	locked by: gilles;
+date: 2010/08/09 00:03:21;  author: gilles;  state: Exp;  lines: +7 -7
+Bug fix. Stupid undef breaking --syncinternaldates
+----------------------------
+revision 1.339
+date: 2010/07/28 15:07:56;  author: gilles;  state: Exp;  lines: +27 -20
+Made a justconnect() routine.
+----------------------------
+revision 1.338
+date: 2010/07/28 14:56:26;  author: gilles;  state: Exp;  lines: +42 -27
+Added SYNOPSIS at the top of the documentation.
+----------------------------
+revision 1.337
 date: 2010/07/16 23:23:40;  author: gilles;  state: Exp;  lines: +12 -6
 Added --usedatemanip option (not documented in --help)
 Turned off Date::Manip usage by default: release 6.x vs 5.x buggy,
