--- a/FAQ
+++ b/FAQ
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: FAQ,v 1.71 2010/07/15 12:07:00 gilles Exp gilles $
+# $Id: FAQ,v 1.73 2010/08/08 23:09:04 gilles Exp gilles $
 
 +------------------+
 | FAQ for imapsync |
@@ -59,6 +59,9 @@ R. Here:
 RFC 3501 - INTERNET MESSAGE ACCESS PROTOCOL - VERSION 4rev1
 http://www.faqs.org/rfcs/rfc3501.html
 
+RFC2683 - IMAP4 Implementation Recommendations
+http://www.faqs.org/rfcs/rfc2683.html
+
 RFC 2595 - Using TLS with IMAP, POP3 and ACAP
 http://www.faqs.org/rfcs/rfc2595.html
 
@@ -67,6 +70,9 @@ http://www.faqs.org/rfcs/rfc2822.html
 
 RFC 2342 - IMAP4 Namespace
 http://www.faqs.org/rfcs/rfc2342.html
+
+RFC2180 - IMAP4 Multi-Accessed Mailbox Practice
+http://www.faqs.org/rfcs/rfc2180.html
 
 RFC 4549 - Synchronization Operations for Disconnected IMAP4 Clients
 http://www.faqs.org/rfcs/rfc4549.html
@@ -884,6 +890,16 @@ Q. Migrating from David Tobit V8
 
 R. Use the following options :
 imapsync ... --prefix1 INBOX. --sep1 / --subscribe --subscribed 
+
+=======================================================================
+Q. Migrating from Tobit David Server 6 
+   ("DvISE Mail Access Server MA-6.60a (0118)")
+
+R. Look at the discussion:
+http://www.linux-france.org/prj/imapsync_list/msg00582.html
+http://www.linux-france.org/prj/imapsync_list/threads.html#00582
+patch saved in ./patches/imapsync-1.337_tobit_V6.patch
+
 
 =======================================================================
 Q. I need to migrate 1250 mailboxes from one cyrus-IMAP server to another
