--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.78 2010/07/14 13:37:02 gilles Exp gilles $
+# $Id: TODO,v 1.80 2010/08/09 01:15:44 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -20,6 +20,14 @@ http://www.linux-france.org/prj/imapsync_list/msg00307.html
 Evaluate 
 http://www.rackspace.com/apps/email_hosting/migrations
 http://www.yippiemove.com/
+
+Add a well described problem for each problem detected
+and counted in error counter statistics.
+
+Add yahoo imap support:
+http://elearningcentral.blogspot.com/2010/07/how-to-use-imapsync-with-yahoo-imap.html
+http://www.bwebcentral.com/utils/imapsync-yahoo
+See patches/imapsync-yahoo
 
 
 DONE. Bugfix. Duplicate messages on host2 are not deleted with --delete2
