--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,27 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.340
+head: 1.342
 branch:
 locks: strict
-	gilles: 1.340
+	gilles: 1.342
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 340;	selected revisions: 340
+total revisions: 342;	selected revisions: 342
 description:
 ----------------------------
-revision 1.340	locked by: gilles;
+revision 1.342	locked by: gilles;
+date: 2010/08/15 11:02:41;  author: gilles;  state: Exp;  lines: +12 -13
+Clarity. Print capability after authenticated state.
+----------------------------
+revision 1.341
+date: 2010/08/15 10:56:45;  author: gilles;  state: Exp;  lines: +42 -14
+Added Mail::IMAPClient::capability_update() to reset the capability cache.
+Bug fix. Some imap server change their capability after authentification,
+imapsync used the capability cache from the first CAPABILITY call.
+----------------------------
+revision 1.340
 date: 2010/08/09 00:03:21;  author: gilles;  state: Exp;  lines: +7 -7
 Bug fix. Stupid undef breaking --syncinternaldates
 ----------------------------
