--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.80 2010/08/09 01:15:44 gilles Exp gilles $
+# $Id: TODO,v 1.81 2010/08/15 11:15:42 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -21,6 +21,11 @@ Evaluate
 http://www.rackspace.com/apps/email_hosting/migrations
 http://www.yippiemove.com/
 
+
+Be more effiscient with large mailboxes
+Write a Mail::IMAPClient::fetch_hash allowing selecting messages to fetch
+4 hours estimated time coding.
+
 Add a well described problem for each problem detected
 and counted in error counter statistics.
 
@@ -29,9 +34,6 @@ http://elearningcentral.blogspot.com/2010/07/how-to-use-imapsync-with-yahoo-imap
 http://www.bwebcentral.com/utils/imapsync-yahoo
 See patches/imapsync-yahoo
 
-
-DONE. Bugfix. Duplicate messages on host2 are not deleted with --delete2
-Reason: "Skipping msg #120:508 in host2 folder INBOX.2005-INBOX (duplicate so we ignore this message)"
 
 Add NTLM authentification support
 http://cpansearch.perl.org/src/BUZZ/NTLM-1.05/NTLM.pm
@@ -153,8 +155,13 @@ http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 Explain expunge behavior.
 
+===========================================================================
 
+DONE. Bugfix. Duplicate messages on host2 are not deleted with --delete2
+Reason: "Skipping msg #120:508 in host2 folder INBOX.2005-INBOX (duplicate so we ignore this message)"
 
+DONE. Ask namespace capability after login (dovecot 2).
+It was a bug from library caching CAPABILITY.
 
 DONE. Write a clean_exit() replacing each die() or exit() call.
 Wrote exit_clean() and die_clean() to remove pid file.
