--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,21 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.342
+head: 1.343
 branch:
 locks: strict
-	gilles: 1.342
+	gilles: 1.343
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 342;	selected revisions: 342
+total revisions: 343;	selected revisions: 343
 description:
 ----------------------------
-revision 1.342	locked by: gilles;
+revision 1.343	locked by: gilles;
+date: 2010/08/15 18:02:11;  author: gilles;  state: Exp;  lines: +9 -7
+Fix. bug in _read_line sysread can return undef;
+----------------------------
+revision 1.342
 date: 2010/08/15 11:02:41;  author: gilles;  state: Exp;  lines: +12 -13
 Clarity. Print capability after authenticated state.
 ----------------------------
