--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.81 2010/08/15 11:15:42 gilles Exp gilles $
+# $Id: TODO,v 1.83 2010/08/20 02:12:05 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -22,9 +22,7 @@ http://www.rackspace.com/apps/email_hosting/migrations
 http://www.yippiemove.com/
 
 
-Be more effiscient with large mailboxes
-Write a Mail::IMAPClient::fetch_hash allowing selecting messages to fetch
-4 hours estimated time coding.
+Add --noauthmd51 --noauthmd52 to permit noauthmd5 by host
 
 Add a well described problem for each problem detected
 and counted in error counter statistics.
@@ -44,6 +42,9 @@ Not everything but flag synchronization will be nice"
 
 Add sync imap keywords. Sync gmail labels to imap keyword
 http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=503159
+http://www.linux-france.org/prj/imapsync_list/msg00022.html
+http://mail.google.com/support/bin/answer.py?hl=en&answer=77657
+http://mail.google.com/support/bin/answer.py?answer=78892 
 
 Add and option to sync to & from files.
 
@@ -156,6 +157,10 @@ http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 Explain expunge behavior.
 
 ===========================================================================
+
+DONE.Be more effiscient with large mailboxes
+Write a Mail::IMAPClient::fetch_hash allowing selecting messages to fetch
+4 hours estimated time coding. Time spent 4h30 (with public release and emails)
 
 DONE. Bugfix. Duplicate messages on host2 are not deleted with --delete2
 Reason: "Skipping msg #120:508 in host2 folder INBOX.2005-INBOX (duplicate so we ignore this message)"
