--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,24 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.343
+head: 1.344
 branch:
 locks: strict
-	gilles: 1.343
+	gilles: 1.344
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 343;	selected revisions: 343
+total revisions: 344;	selected revisions: 344
 description:
 ----------------------------
-revision 1.343	locked by: gilles;
+revision 1.344	locked by: gilles;
+date: 2010/08/20 02:06:13;  author: gilles;  state: Exp;  lines: +123 -49
+Added function fetch_hash_2() allowing a list of uid to be fetched.
+Changed fetch_hash() calls by fetch_hash_2() calls
+This fixed the bug "Be more effiscient with large mailboxes",
+search ALL was useless with --maxage or --minage in fetch_hash()
+----------------------------
+revision 1.343
 date: 2010/08/15 18:02:11;  author: gilles;  state: Exp;  lines: +9 -7
 Fix. bug in _read_line sysread can return undef;
 ----------------------------
